k8s/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 772876499232.dkr.ecr.ap-south-1.amazonaws.com/devops-ci-cd-pipeline-peoject/frontend:latest
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
