k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
